# hla

./: .buildinfo  .gitignore  README.md  emittance_meas_lnls.py  energy_meas_lnls.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  siriushla.as_ap_configdb.html  siriushla.as_ap_configdb.models.html  siriushla.as_ap_configdb.normconfigs.html  siriushla.as_ap_configdb.pvsconfigs.delegate.html  siriushla.as_ap_configdb.pvsconfigs.html  siriushla.as_ap_currinfo.html  siriushla.as_ap_energybutton.html  siriushla.as_ap_injcontrol.html  siriushla.as_ap_injection.html  siriushla.as_ap_launcher.html  siriushla.as_ap_machshift.html  siriushla.as_ap_macreport.html  siriushla.as_ap_magoffconv.html  siriushla.as_ap_measure.html  siriushla.as_ap_monitor.html  siriushla.as_ap_opticscorr.html  siriushla.as_ap_posang.html  siriushla.as_ap_rabpmmon.html  siriushla.as_ap_radmon.html  siriushla.as_ap_sofb.graphics.html  siriushla.as_ap_sofb.html  siriushla.as_ap_sofb.ioc_control.html  siriushla.as_di_bpms.html  siriushla.as_di_dccts.html  siriushla.as_di_icts.html  siriushla.as_di_scrns.html  siriushla.as_di_tune.html  siriushla.as_di_vlight.html  siriushla.as_ps_commands.html  (+37 more)
pyqt-apps/: INSTALL  MANIFEST.in  Makefile  README.md  VERSION  designer_plugin.py  pyproject.toml  requirements.txt  setup.py
pyqt-apps/docs/: doc_requirements.txt
pyqt-apps/docs/source/: conf.py  siriushla.as_ap_configdb.normconfigs.rst  siriushla.as_ap_configdb.pvsconfigs.delegate.rst  siriushla.as_ap_configdb.pvsconfigs.rst  siriushla.as_ap_configdb.rst  siriushla.as_ap_injcontrol.rst  siriushla.as_ap_injection.rst  siriushla.as_ap_macreport.rst  siriushla.as_ap_magoffconv.rst  siriushla.as_ap_measure.rst  siriushla.as_ap_monitor.rst  siriushla.as_ap_opticscorr.rst  siriushla.as_ap_sofb.graphics.rst  siriushla.as_ap_sofb.ioc_control.rst  siriushla.as_ap_sofb.rst  siriushla.as_di_bpms.rst  siriushla.as_di_scrns.rst  siriushla.as_di_tune.rst  siriushla.as_di_vlight.rst  siriushla.as_ps_commands.rst  siriushla.as_ps_control.detail_widget.rst  siriushla.as_ps_diag.rst  siriushla.as_pu_control.rst  siriushla.as_rf_control.rst  siriushla.bo_ap_ramp.rst  siriushla.common.afc_acq_core.rst  siriushla.common.cam_basler.rst  siriushla.common.epics.task.rst  siriushla.common.epics.wrapper.rst  siriushla.common.rst  siriushla.li_di_bpms.rst  siriushla.li_di_scrns.rst  siriushla.li_pu_modltr.rst  siriushla.li_rf_llrf.rst  siriushla.rst  siriushla.si_ap_fofb.rst  siriushla.si_ap_genstatus.rst  siriushla.si_ap_idff.rst  siriushla.si_di_bbb.rst  siriushla.si_di_equalize_bpms.rst  (+4 more)
pyqt-apps/etc/: sirius-hla-as-style.css
pyqt-apps/resources/: resources.qrc  sirius-hla-style.css  style.css
pyqt-apps/scripts/: app.pyw  as_ps_cycle.py  bo_config_manager.py  bo_ma_control.py  resources.py  resources.qrc  si_ma_control.py  sirius-hla-as-ap-config-manager.py  sirius-hla-as-ap-configdb.py  sirius-hla-as-ap-cratemon.py  sirius-hla-as-ap-effmon.py  sirius-hla-as-ap-energy-setter.py  sirius-hla-as-ap-energybutton.py  sirius-hla-as-ap-injection.py  sirius-hla-as-ap-launcher.py  sirius-hla-as-ap-macreport.py  sirius-hla-as-ap-magoffconv.py  sirius-hla-as-ap-monitor.py  sirius-hla-as-ap-operation.py  sirius-hla-as-ap-orbscore.py  sirius-hla-as-ap-pvsconfigs-load.py  sirius-hla-as-ap-pvsconfigs-save.py  sirius-hla-as-ap-pvsconfigs.py  sirius-hla-as-ap-pvsconfmgr.py  sirius-hla-as-ap-rabpmmon.py  sirius-hla-as-ap-radmon.py  sirius-hla-as-ap-servconf.py  sirius-hla-as-ap-windowpos.py  sirius-hla-as-cr-control.py  sirius-hla-as-di-bpm.py  sirius-hla-as-di-dcct.py  sirius-hla-as-di-scrn.py  sirius-hla-as-interlocks.py  sirius-hla-as-launcher.py  sirius-hla-as-ma-launcher.py  sirius-hla-as-ma-offconv.py  sirius-hla-as-pm-detail.py  sirius-hla-as-ps-commands.py  sirius-hla-as-ps-cycle.py  sirius-hla-as-ps-detail.py  (+101 more)
pyqt-apps/scripts/css/: style.css
pyqt-apps/siriushla/: FloatSetPointWidget.py  SiriusApplication.py  VERSION  WindowManager.py  __init__.py  resources.py  sirius-hla-style.css  sirius_application.py  util.py
pyqt-apps/siriushla/as_ap_bpms/: __init__.py  bmps_windows.py  bpms_windows.py  multiples_bpms.py  single_bpm.py
pyqt-apps/siriushla/as_ap_configdb/: ConfigModel.py  __init__.py  client_configdb.py  configdialogs.py  configwidgets.py
pyqt-apps/siriushla/as_ap_configuration/: __init__.py  configuration_window.py
pyqt-apps/siriushla/as_ap_confmgr/: TuneDlg.py
pyqt-apps/siriushla/as_ap_cratemon/: __init__.py  custom_widgets.py  main.py  util.py
pyqt-apps/siriushla/as_ap_currinfo/: charge_monitor.py  current_and_lifetime.py  efficiency_monitor.py
pyqt-apps/siriushla/as_ap_currlt/: HLCurrentLifetime.py  charge_monitor.py  current_and_lifetime.py  custom_widgets.py  ui_bo_ap_currlt.ui  ui_si_ap_currlt.ui
pyqt-apps/siriushla/as_ap_dataview/: __init__.py  auxiliary_dialogs.py  custom_widgets.py  main.py
pyqt-apps/siriushla/as_ap_energybutton/: __init__.py  energy_button.py  energy_setter.py  energy_setter_window.py  set_energy.py
pyqt-apps/siriushla/as_ap_injcontrol/: __init__.py  base.py  injbo.py  tbts.py
pyqt-apps/siriushla/as_ap_injection/: BarGraphWidget.py  CustomExceptions.py  InjectionController.py  InjectionWindow.py  __init__.py  auxiliary_dialogs.py  killbeam_widgets.py  main.py  widgets.py
pyqt-apps/siriushla/as_ap_launcher/: __init__.py  killbeam_widgets.py  main.py  menu.py  standby_handlers.py  standby_widgets.py
pyqt-apps/siriushla/as_ap_machshift/: __init__.py  test.py  widgets.py
pyqt-apps/siriushla/as_ap_macreport/: __init__.py  main.py
pyqt-apps/siriushla/as_ap_magoffconv/: __init__.py  main.py
pyqt-apps/siriushla/as_ap_measure/: __init__.py  emittance_meas.py  emittance_meas_lnls.py  energy_meas.py  energy_meas_lnls.py  utils.py
pyqt-apps/siriushla/as_ap_monitor/: __init__.py  main.py  monitor.py  util.py
pyqt-apps/tests/: run_tests.py  test_config_names_model.py  test_config_type_model.py  test_configuration_window.py  test_pv_configuration_table_model.py  test_read_configuration_window.py  test_set_configuration_window.py
(+1213 files in other folders)
